Starting the responsive versions

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
       <h4 class="sub_section_title_utility">- Breakpoints</h4>
       <p>The device ranges are more aligned with common screen sizes today.</p>
 
-      <table class="breakpoints-table">
+      <!-- <table class="breakpoints-table">
         <thead>
           <tr>
             <th>Devices</th>
@@ -286,7 +286,7 @@
             <td>24px</td>
           </tr>
         </tbody>
-      </table>
+      </table> -->
     </section>
     <!-- * ------------------- typography section ------------------- -->
     <section id="typography" class="typography-wrapp container_utility">
@@ -389,7 +389,7 @@
       <h2 class="section_title_utility">Data visualization</h2>
 
       <!--------------------------  Line chart -->
-      <div class="graph-container">
+      <!-- <div class="graph-container">
         <h4 class="sub_section_title_utility">- Line Chart</h4>
         <p>
           Used to display data points connected by straight lines. It's commonly
@@ -405,10 +405,10 @@
           preserveAspectRatio="xMinYMin meet"
         ></svg>
         <div class="tooltip" id="tooltip"></div>
-      </div>
+      </div> -->
 
       <!-------------------------- Line chart Stacked -->
-      <div class="graph-container">
+      <!-- <div class="graph-container">
         <h4 class="sub_section_title_utility">- Line Chart Stacked</h4>
         <p>
           Variation of a line chart where multiple data series are layered on
@@ -421,9 +421,9 @@
           viewBox="0 0 750 400"
           preserveAspectRatio="xMinYMin meet"
         ></svg>
-      </div>
+      </div> -->
       <!-------------------------- Bar chart  -->
-      <div class="graph-container">
+      <!-- <div class="graph-container">
         <h4 class="sub_section_title_utility">- Bar Chart</h4>
         <p>
           Uses rectangular bars to represent data values. The length or height
@@ -439,10 +439,10 @@
           viewBox="0 0 750 400"
           preserveAspectRatio="xMinYMin meet"
         ></svg>
-      </div>
+      </div> -->
 
       <!-------------------------- Bar Chart stacked -->
-      <div class="graph-container">
+      <!-- <div class="graph-container">
         <h4 class="sub_section_title_utility">- Bar Chart Stacked</h4>
         <p>
           Variation of a bar chart where multiple data series are stacked on top
@@ -455,9 +455,9 @@
           viewBox="0 0 750 400"
           preserveAspectRatio="xMinYMin meet"
         ></svg>
-      </div>
+      </div> -->
       <!-------------------------- Bar Chart horizontal -->
-      <div class="graph-container">
+      <!-- <div class="graph-container">
         <h4 class="sub_section_title_utility">- Bar Chart Horizontal</h4>
         <p>
           Bar chart where the bars extend horizontally from the y-axis instead
@@ -472,10 +472,10 @@
           viewBox="0 0 750 400"
           preserveAspectRatio="xMinYMin meet"
         ></svg>
-      </div>
+      </div> -->
 
       <!-------------------------- Area Chart  -->
-      <div class="graph-container">
+      <!-- <div class="graph-container">
         <h4 class="sub_section_title_utility">- Area Chart</h4>
         <p>
           Type of chart similar to a line chart but with the area below the line
@@ -490,10 +490,10 @@
           viewBox="0 0 750 400"
           preserveAspectRatio="xMinYMin meet"
         ></svg>
-      </div>
+      </div> -->
 
       <!-------------------------- Scatter Plot  -->
-      <div class="graph-container">
+      <!-- <div class="graph-container">
         <h4 class="sub_section_title_utility">- Scatter Plot</h4>
         <p>
           Type of chart that displays data as individual points on a
@@ -509,10 +509,10 @@
           viewBox="0 0 750 400"
           preserveAspectRatio="xMinYMin meet"
         ></svg>
-      </div>
+      </div> -->
 
       <!-------------------------- Pie Chart  -->
-      <div class="graph-container">
+      <!-- <div class="graph-container">
         <h4 class="sub_section_title_utility">- Pie Chart</h4>
         <p>
           Circular statistical graphic divided into slices to illustrate the
@@ -527,10 +527,10 @@
           viewBox="0 0 750 400"
           preserveAspectRatio="xMinYMin meet"
         ></svg>
-      </div>
+      </div> -->
 
       <!-------------------------- Donut Chart -->
-      <div class="graph-container">
+      <!-- <div class="graph-container">
         <h4 class="sub_section_title_utility">- Donut Chart</h4>
         <p>
           Is a variation of a pie chart with a hole in the center, resembling a
@@ -544,18 +544,18 @@
           viewBox="0 0 750 400"
           preserveAspectRatio="xMinYMin meet"
         ></svg>
-      </div>
+      </div> -->
     </section>
 
     <!-- * ------------------- Footer ------------------- -->
     <footer>
       <p>Made with 💗 By: &nbsp;</p>
       <div class="group">
-        <p>Luis Guaiquirian</p>
-        <p>Edgar Gomez</p>
-        <p>Jose Prado</p>
-        <p>Andres Sanchez</p>
-        <p>Ramses Verdayes</p>
+        <small>Luis Guaiquirian</small>
+        <small>Edgar Gomez</small>
+        <small>Jose Prado</small>
+        <small>Andres Sanchez</small>
+        <small>Ramses Verdayes</small>
       </div>
     </footer>
 
