adapting charts to mobile

--- a/index.html
+++ b/index.html
@@ -336,43 +336,43 @@
           <div class="type-chart-row">
             <p class="type-chart-row-title headingOne">Heading One</p>
             <p class="type-chart-row-size">70px</p>
-            <p class="type-chart-row-name">Allura · Bold</p>
+            <p class="type-chart-row-name">Allura</p>
           </div>
 
           <div class="type-chart-row">
             <p class="type-chart-row-title headingTwo">Heading Two</p>
             <p class="type-chart-row-size">40px</p>
-            <p class="type-chart-row-name">Monserrat · Bold</p>
+            <p class="type-chart-row-name">Monserrat</p>
           </div>
 
           <div class="type-chart-row">
             <p class="type-chart-row-title headingThree">Heading Three</p>
             <p class="type-chart-row-size">35px</p>
-            <p class="type-chart-row-name">Monserrat · Bold</p>
+            <p class="type-chart-row-name">Monserrat</p>
           </div>
 
           <div class="type-chart-row">
             <p class="type-chart-row-title headingFour">Heading Four</p>
             <p class="type-chart-row-size">22px</p>
-            <p class="type-chart-row-name">Monserrat · Medium</p>
+            <p class="type-chart-row-name">Monserrat</p>
           </div>
 
           <div class="type-chart-row">
             <p class="type-chart-row-title headingFive">Heading Five</p>
             <p class="type-chart-row-size">14px</p>
-            <p class="type-chart-row-name">Monserrat · Bold</p>
+            <p class="type-chart-row-name">Monserrat</p>
           </div>
 
           <div class="type-chart-row">
             <p class="type-chart-row-title">Body</p>
             <p class="type-chart-row-size">16px</p>
-            <p class="type-chart-row-name">Open Sans · Regular</p>
+            <p class="type-chart-row-name">Open Sans</p>
           </div>
 
           <div class="type-chart-row">
             <p class="type-chart-row-title buttons">Buttons</p>
             <p class="type-chart-row-size">20px</p>
-            <p class="type-chart-row-name">Open Sans · Bold</p>
+            <p class="type-chart-row-name">Open Sans</p>
           </div>
         </div>
       </div>
@@ -389,7 +389,7 @@
       <h2 class="section_title_utility">Data visualization</h2>
 
       <!--------------------------  Line chart -->
-      <!-- <div class="graph-container">
+      <div class="graph-container">
         <h4 class="sub_section_title_utility">- Line Chart</h4>
         <p>
           Used to display data points connected by straight lines. It's commonly
@@ -405,10 +405,10 @@
           preserveAspectRatio="xMinYMin meet"
         ></svg>
         <div class="tooltip" id="tooltip"></div>
-      </div> -->
+      </div>
 
       <!-------------------------- Line chart Stacked -->
-      <!-- <div class="graph-container">
+      <div class="graph-container">
         <h4 class="sub_section_title_utility">- Line Chart Stacked</h4>
         <p>
           Variation of a line chart where multiple data series are layered on
@@ -421,7 +421,7 @@
           viewBox="0 0 750 400"
           preserveAspectRatio="xMinYMin meet"
         ></svg>
-      </div> -->
+      </div>
       <!-------------------------- Bar chart  -->
       <!-- <div class="graph-container">
         <h4 class="sub_section_title_utility">- Bar Chart</h4>
