--- a/index.html
+++ b/index.html
@@ -206,24 +206,24 @@
 
       <div class="grid-layout">
         <!-- Mobile -->
-        <h5>Mobile (0px - 599px)</h5>
+        <h5 class="tertiary_heading_utility">Mobile (0px - 599px)</h5>
         <div class="grid-layout-row grid-layout-row-one">
           <div class="block-layout">1/1</div>
         </div>
-        <h5>Small Tablet (600px - 899px)</h5>
+        <h5 class="tertiary_heading_utility">Small Tablet (600px - 899px)</h5>
         <!-- Tablets -->
         <div class="grid-layout-row grid-layout-row-two">
           <div class="block-layout">1/2</div>
           <div class="block-layout">1/2</div>
         </div>
-        <h5>Big Tablet (900px - 1199px)</h5>
+        <h5 class="tertiary_heading_utility">Big Tablet (900px - 1199px)</h5>
         <!-- Laptops -->
         <div class="grid-layout-row grid-layout-row-three">
           <div class="block-layout">1/3</div>
           <div class="block-layout">1/3</div>
           <div class="block-layout">1/3</div>
         </div>
-        <h5>Laptop (1200px - 1439px)</h5>
+        <h5 class="tertiary_heading_utility">Laptop (1200px - 1439px)</h5>
         <!-- Desktop  + 1200 -->
         <div class="grid-layout-row grid-layout-row-four">
           <div class="block-layout">1/4</div>
@@ -231,7 +231,7 @@
           <div class="block-layout">1/4</div>
           <div class="block-layout">1/4</div>
         </div>
-        <h5>Desktop (1440px +)</h5>
+        <h5 class="tertiary_heading_utility">Desktop (1440px +)</h5>
         <!-- Large Desktop -->
         <div class="grid-layout-row grid-layout-row-five">
           <div class="block-layout">1/5</div>
@@ -397,7 +397,7 @@
           variables change across a continuous interval (such as days, months,
           or years).
         </p>
-        <h5>Passengers data by Month.</h5>
+        <h5 class="tertiary_heading_utility">Passengers data by Month.</h5>
         <svg
           id="line-chart"
           class="graph-box"
@@ -414,7 +414,7 @@
           Variation of a line chart where multiple data series are layered on
           top of each other, rather than overlapping.
         </p>
-        <h5>Reveneu and Expenses by month.</h5>
+        <h5 class="tertiary_heading_utility">Reveneu and Expenses by month.</h5>
         <svg
           id="line-chart-stacked"
           class="graph-box"
@@ -423,7 +423,7 @@
         ></svg>
       </div>
       <!-------------------------- Bar chart  -->
-      <!-- <div class="graph-container">
+      <div class="graph-container">
         <h4 class="sub_section_title_utility">- Bar Chart</h4>
         <p>
           Uses rectangular bars to represent data values. The length or height
@@ -432,32 +432,32 @@
           typically used when the data is categorical (like types, groups, or
           classifications) rather than continuous.
         </p>
-        <h5>Most popular destinations</h5>
+        <h5 class="tertiary_heading_utility">Most popular destinations</h5>
         <svg
           id="bar-chart"
           class="graph-box"
           viewBox="0 0 750 400"
           preserveAspectRatio="xMinYMin meet"
         ></svg>
-      </div> -->
+      </div>
 
       <!-------------------------- Bar Chart stacked -->
-      <!-- <div class="graph-container">
+      <div class="graph-container">
         <h4 class="sub_section_title_utility">- Bar Chart Stacked</h4>
         <p>
           Variation of a bar chart where multiple data series are stacked on top
           of each other in a single bar, rather than being placed side-by-side
         </p>
-        <h5>Revenue by Class</h5>
+        <h5 class="tertiary_heading_utility">Revenue by Class</h5>
         <svg
           id="bar-chart-stacked"
           class="graph-box"
           viewBox="0 0 750 400"
           preserveAspectRatio="xMinYMin meet"
         ></svg>
-      </div> -->
+      </div>
       <!-------------------------- Bar Chart horizontal -->
-      <!-- <div class="graph-container">
+      <div class="graph-container">
         <h4 class="sub_section_title_utility">- Bar Chart Horizontal</h4>
         <p>
           Bar chart where the bars extend horizontally from the y-axis instead
@@ -465,17 +465,17 @@
           of the data it corresponds to, making it easy to compare values across
           categories.
         </p>
-        <h5>Passenger by Flight type</h5>
+        <h5 class="tertiary_heading_utility">Passenger by Flight type</h5>
         <svg
           id="bar-chart-horizontal"
           class="graph-box"
           viewBox="0 0 750 400"
           preserveAspectRatio="xMinYMin meet"
         ></svg>
-      </div> -->
+      </div>
 
       <!-------------------------- Area Chart  -->
-      <!-- <div class="graph-container">
+      <div class="graph-container">
         <h4 class="sub_section_title_utility">- Area Chart</h4>
         <p>
           Type of chart similar to a line chart but with the area below the line
@@ -483,17 +483,17 @@
           cumulative values over time or across categories, as well as seeing
           how quantities change.
         </p>
-        <h5>Passenger Data</h5>
+        <h5 class="tertiary_heading_utility">Passenger Data</h5>
         <svg
           id="area-chart"
           class="graph-box"
           viewBox="0 0 750 400"
           preserveAspectRatio="xMinYMin meet"
         ></svg>
-      </div> -->
+      </div>
 
       <!-------------------------- Scatter Plot  -->
-      <!-- <div class="graph-container">
+      <div class="graph-container">
         <h4 class="sub_section_title_utility">- Scatter Plot</h4>
         <p>
           Type of chart that displays data as individual points on a
@@ -502,17 +502,17 @@
           other on the y-axis. Each data point represents a unique observation
           in the dataset.
         </p>
-        <h5>Customer Satisfaction</h5>
+        <h5 class="tertiary_heading_utility">Customer Satisfaction</h5>
         <svg
           id="scatter-plot"
           class="graph-box"
           viewBox="0 0 750 400"
           preserveAspectRatio="xMinYMin meet"
         ></svg>
-      </div> -->
+      </div>
 
       <!-------------------------- Pie Chart  -->
-      <!-- <div class="graph-container">
+      <div class="graph-container">
         <h4 class="sub_section_title_utility">- Pie Chart</h4>
         <p>
           Circular statistical graphic divided into slices to illustrate the
@@ -520,31 +520,31 @@
           category's contribution to the total, making it easy to visualize
           relative sizes.
         </p>
-        <h5>Passengers by Class</h5>
+        <h5 class="tertiary_heading_utility">Passengers by Class</h5>
         <svg
           id="pie-chart"
           class="graph-box"
           viewBox="0 0 750 400"
           preserveAspectRatio="xMinYMin meet"
         ></svg>
-      </div> -->
+      </div>
 
       <!-------------------------- Donut Chart -->
-      <!-- <div class="graph-container">
+      <div class="graph-container">
         <h4 class="sub_section_title_utility">- Donut Chart</h4>
         <p>
           Is a variation of a pie chart with a hole in the center, resembling a
           donut. It is used to display data in a circular format, showing the
           relative proportions of a whole, similar to a pie chart.
         </p>
-        <h5>Passengers by Class</h5>
+        <h5 class="tertiary_heading_utility">Passengers by Class</h5>
         <svg
           id="donut-chart"
           class="graph-box"
           viewBox="0 0 750 400"
           preserveAspectRatio="xMinYMin meet"
         ></svg>
-      </div> -->
+      </div>
     </section>
 
     <!-- * ------------------- Footer ------------------- -->
