--- a/index.html
+++ b/index.html
@@ -547,6 +547,28 @@
       </div>
     </section>
 
+    <section id="components" class="components-section container_utility">
+      <h2 class="section_title_utility">Components</h2>
+      <div class="components-block">
+        <h4 class="sub_section_title_utility">- Component 1</h4>
+      </div>
+      <div class="components-block">
+        <h4 class="sub_section_title_utility">- Component 2</h4>
+      </div>
+      <div class="components-block">
+        <h4 class="sub_section_title_utility">- Component 3</h4>
+      </div>
+      <div class="components-block">
+        <h4 class="sub_section_title_utility">- Component 4</h4>
+      </div>
+      <div class="components-block">
+        <h4 class="sub_section_title_utility">- Component 5</h4>
+      </div>
+      <div class="components-block">
+        <h4 class="sub_section_title_utility">- Component 6</h4>
+      </div>
+    </section>
+
     <!-- * ------------------- Footer ------------------- -->
     <footer>
       <p>Made with 💗 By: &nbsp;</p>
