Final touchs to components

--- a/index.html
+++ b/index.html
@@ -660,11 +660,11 @@
       <!-- ^ Component 2 Buttons -->
       <div class="components-block">
         <h4 class="sub_section_title_utility">- Buttons</h4>
-        <button type="button" class="button-xs">Button text</button>
-        <button type="button" class="button-sm">Button text</button>
-        <button type="button" class="button-md">Button text</button>
-        <button type="button" class="button-lg">Button text</button>
-        <button type="button" class="button-xl">Button text</button>
+        <button type="button" class="btn-sample button-xs">Button text</button>
+        <button type="button" class="btn-sample button-sm">Button text</button>
+        <button type="button" class="btn-sample button-md">Button text</button>
+        <button type="button" class="btn-sample button-lg">Button text</button>
+        <button type="button" class="btn-sample button-xl">Button text</button>
         <div class="code">
           <pre><code>
 &lt;button type="button" class="button-xs"&gt;Button text&lt;/button&gt;
