Adding mobile menu

--- a/index.html
+++ b/index.html
@@ -92,6 +92,28 @@
             </li>
           </ul>
         </nav>
+        <!-- Botón de menú hamburguesa -->
+        <div class="menu-toggle" id="mobile-menu">&#9776;</div>
+        <!-- Menú móvil -->
+        <div class="mobile-nav">
+          <ul>
+            <li>
+              <a href="#colors">Colors</a>
+            </li>
+            <li>
+              <a href="#layout">Layout</a>
+            </li>
+            <li>
+              <a href="#typography">Typography</a>
+            </li>
+            <li>
+              <a href="#visualization">Data visualization</a>
+            </li>
+            <li>
+              <a href="#components">Components</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
 
@@ -193,6 +215,7 @@
         </div>
       </div>
     </section>
+
     <!-- * ------------------- Layout section ------------------- -->
     <section id="layout" class="layout-wrapp container_utility">
       <h2 class="section_title_utility">Layout</h2>
@@ -290,6 +313,7 @@
         </table>
       </div>
     </section>
+
     <!-- * ------------------- typography section ------------------- -->
     <section id="typography" class="typography-wrapp container_utility">
       <h2 class="section_title_utility">Typography</h2>
@@ -386,6 +410,7 @@
         </p>
       </div>
     </section>
+
     <!-- * ------------------- Data section ------------------- -->
     <section id="visualization" class="data-wrapp container_utility">
       <h2 class="section_title_utility">Data visualization</h2>
@@ -549,6 +574,7 @@
       </div>
     </section>
 
+    <!-- * ------------------- Component section ------------------- -->
     <section id="components" class="components-section container_utility">
       <h2 class="section_title_utility">Components</h2>
 
