--- a/index.html
+++ b/index.html
@@ -581,6 +581,11 @@
       <!-- ^ Component 1 Booking  -->
       <div class="components-block">
         <h4 class="sub_section_title_utility">- Booking Block</h4>
+        <p>
+          The Booking Block allows users to enter travel details such as dates,
+          destinations, and passenger counts, streamlining the flight booking
+          process.
+        </p>
         <div class="flight-booking">
           <form class="booking-form">
             <div class="form-group">
@@ -686,6 +691,11 @@
       <!-- ^ Component 2 Buttons -->
       <div class="components-block">
         <h4 class="sub_section_title_utility">- Buttons</h4>
+        <p>
+          Buttons like "Search Flights" and "Book Now" enable users to perform
+          key actions on the website, guiding them through their booking
+          journey.
+        </p>
         <button type="button" class="btn-sample button-xs">Button text</button>
         <button type="button" class="btn-sample button-sm">Button text</button>
         <button type="button" class="btn-sample button-md">Button text</button>
@@ -698,7 +708,6 @@
 &lt;button type="button" class="button-md"&gt;Button text&lt;/button&gt;
 &lt;button type="button" class="button-lg"&gt;Button text&lt;/button&gt;
 &lt;button type="button" class="button-xl"&gt;Button text&lt;/button&gt;
-      
       </code></pre>
         </div>
       </div>
@@ -706,6 +715,11 @@
       <!-- ^ Component 3 booking card -->
       <div class="components-block">
         <h4 class="sub_section_title_utility">- Booking Card</h4>
+        <p>
+          The Booking Card displays essential flight information, including
+          prices and schedules, helping users quickly compare options and make
+          informed decisions.
+        </p>
         <div class="flight-card">
           <p class="flight-number">Flight No: AB123</p>
           <div class="flight-info">
@@ -745,6 +759,10 @@
       <!-- ^ Component 4 Inputs -->
       <div class="components-block">
         <h4 class="sub_section_title_utility">- Inputs</h4>
+        <p>
+          Inputs are fields for users to enter personal information and payment
+          details, ensuring accurate data collection during the booking process.
+        </p>
         <div class="input-container">
           <label for="name" class="label">First Name</label>
           <input type="text" name="fName" id="fName" class="input-field" />
@@ -779,6 +797,10 @@
       <!-- ^ Component 5 TextArea-->
       <div class="components-block">
         <h4 class="sub_section_title_utility">- Text Area</h4>
+        <p>
+          The Textarea allows users to add special requests or comments,
+          personalizing their booking experience and addressing specific needs.
+        </p>
         <div>
           <label for="comment" class="label-textarea">Add your comment</label>
           <div class="mt-2">
@@ -803,6 +825,10 @@
       <!-- ^ Component  6 Lists -->
       <div class="components-block">
         <h4 class="sub_section_title_utility">- Lists</h4>
+        <p>
+          Lists present options like available flights or services, helping
+          users navigate choices and find relevant information efficiently.
+        </p>
         <fieldset class="fieldset">
           <div class="crew-list">
             <div class="crew-item">
